==> MS71/ROS2Mower/esp32/ros2node/components/vl53l1x/VL53L1X.cpp <==
#define LOG_LOCAL_LEVEL ESP_LOG_INFO
#include "esp_log.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <VL53L1X.h>
#include <driver/gpio.h>
#include <driver/i2c.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#define I2C_TIMEOUT 10
#define ESP_ERROR_CHECK_NONFATAL(expr, retexpr)                                  \
    {                                                                            \
        esp_err_t __err_rc = (expr);                                             \
        if(__err_rc != ESP_OK) {                                                 \
            ESP_LOGE(__FUNCTION__, "%s != ESP_OK, result: %d", #expr, __err_rc); \
            retexpr;                                                             \
        }                                                                        \
    }

bool VL53L1X::init(bool io_2v8)
{
    uint8_t buf[256];
    read(0x00C0, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT));
    // check model ID and module type registers (values specified in datasheet)
    if(readReg16Bit(IDENTIFICATION__MODEL_ID) != 0xEACC) {
        return false;
    }

    // VL53L1_software_reset() begin

    writeReg(SOFT_RESET, 0x00);
    vTaskDelay(100 / portTICK_PERIOD_MS);
    // delayMicroseconds(100);
    writeReg(SOFT_RESET, 0x01);

    // give it some time to boot; otherwise the sensor NACKs during the readReg()
    // call below and the Arduino 101 doesn't seem to handle that well
    vTaskDelay(1);
    // delay(1);

    // VL53L1_poll_for_boot_completion() begin

    startTimeout();

    // check last_status in case we still get a NACK to try to deal with it correctly
    while((readReg(FIRMWARE__SYSTEM_STATUS) & 0x01) == 0 || last_status != 0) {
        if(checkTimeoutExpired()) {
            did_timeout = true;
            return false;
        }
    }
    // VL53L1_poll_for_boot_completion() end

    // VL53L1_software_reset() end

    // VL53L1_DataInit() begin

    // sensor uses 1V8 mode for I/O by default; switch to 2V8 mode if necessary
    if(io_2v8) {
        writeReg(PAD_I2C_HV__EXTSUP_CONFIG, readReg(PAD_I2C_HV__EXTSUP_CONFIG) | 0x01);
    }

    // store oscillator info for later use
    fast_osc_frequency = readReg16Bit(OSC_MEASURED__FAST_OSC__FREQUENCY);
    osc_calibrate_val = readReg16Bit(RESULT__OSC_CALIBRATE_VAL);

    // VL53L1_DataInit() end

    // VL53L1_StaticInit() begin

    // Note that the API does not actually apply the configuration settings below
    // when VL53L1_StaticInit() is called: it keeps a copy of the sensor's
    // register contents in memory and doesn't actually write them until a
    // measurement is started. Writing the configuration here means we don't have
    // to keep it all in memory and avoids a lot of redundant writes later.

    // the API sets the preset mode to LOWPOWER_AUTONOMOUS here:
    // VL53L1_set_preset_mode() begin

    // VL53L1_preset_mode_standard_ranging() begin

    // values labeled "tuning parm default" are from vl53l1_tuning_parm_defaults.h
    // (API uses these in VL53L1_init_tuning_parm_storage_struct())

    // static config
    // API resets PAD_I2C_HV__EXTSUP_CONFIG here, but maybe we don't want to do
    // that? (seems like it would disable 2V8 mode)
    writeReg16Bit(DSS_CONFIG__TARGET_TOTAL_RATE_MCPS, TargetRate); // should already be this value after reset
    writeReg(GPIO__TIO_HV_STATUS, 0x02);
    writeReg(SIGMA_ESTIMATOR__EFFECTIVE_PULSE_WIDTH_NS, 8);    // tuning parm default
    writeReg(SIGMA_ESTIMATOR__EFFECTIVE_AMBIENT_WIDTH_NS, 16); // tuning parm default
    writeReg(ALGO__CROSSTALK_COMPENSATION_VALID_HEIGHT_MM, 0x01);
    writeReg(ALGO__RANGE_IGNORE_VALID_HEIGHT_MM, 0xFF);
    writeReg(ALGO__RANGE_MIN_CLIP, 0);               // tuning parm default
    writeReg(ALGO__CONSISTENCY_CHECK__TOLERANCE, 2); // tuning parm default

    // general config
    writeReg16Bit(SYSTEM__THRESH_RATE_HIGH, 0x0000);
    writeReg16Bit(SYSTEM__THRESH_RATE_LOW, 0x0000);
    writeReg(DSS_CONFIG__APERTURE_ATTENUATION, 0x38);

    // timing config
    // most of these settings will be determined later by distance and timing
    // budget configuration
    writeReg16Bit(RANGE_CONFIG__SIGMA_THRESH, 360);                  // tuning parm default
    writeReg16Bit(RANGE_CONFIG__MIN_COUNT_RATE_RTN_LIMIT_MCPS, 192); // tuning parm default

    // dynamic config

    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_0, 0x01);
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD_1, 0x01);
    writeReg(SD_CONFIG__QUANTIFIER, 2); // tuning parm default

    // VL53L1_preset_mode_standard_ranging() end

    // from VL53L1_preset_mode_timed_ranging_*
    // GPH is 0 after reset, but writing GPH0 and GPH1 above seem to set GPH to 1,
    // and things don't seem to work if we don't set GPH back to 0 (which the API
    // does here).
    writeReg(SYSTEM__GROUPED_PARAMETER_HOLD, 0x00);
    writeReg(SYSTEM__SEED_CONFIG, 1); // tuning parm default

    // from VL53L1_config_low_power_auto_mode
    writeReg(SYSTEM__SEQUENCE_CONFIG, 0x8B); // VHV, PHASECAL, DSS1, RANGE
    writeReg16Bit(DSS_CONFIG__MANUAL_EFFECTIVE_SPADS_SELECT, 200 << 8);
    writeReg(DSS_CONFIG__ROI_MODE_CONTROL, 2); // REQUESTED_EFFFECTIVE_SPADS

    // VL53L1_set_preset_mode() end

    // default to long range, 50 ms timing budget
    // note that this is different than what the API defaults to
    setDistanceMode(Long);
    setMeasurementTimingBudget(50000);

    // VL53L1_StaticInit() end

    // the API triggers this change in VL53L1_init_and_start_range() once a
    // measurement is started; assumes MM1 and MM2 are disabled
    writeReg16Bit(ALGO__PART_TO_PART_RANGE_OFFSET_MM, readReg16Bit(MM_CONFIG__OUTER_OFFSET_MM) * 4);

    return true;
}

void VL53L1X::writeReg(uint16_t reg, uint8_t value)
{
    i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "writeReg16Bit(%04x,%02x) ...", reg, value);

    if((CommandHandle = i2c_cmd_link_create()) != NULL) {
        ESP_ERROR_CHECK_NONFATAL(i2c_master_start(CommandHandle), last_status = 4; return );
        ESP_ERROR_CHECK_NONFATAL(
            i2c_master_write_byte(CommandHandle, (address << 1) | I2C_MASTER_WRITE, true), last_status = 2; return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_stop(CommandHandle), last_status = 4; return );
        if(ESP_OK == i2c_master_cmd_begin((i2c_port_t)I2CPortNumber, CommandHandle, pdMS_TO_TICKS(I2C_TIMEOUT))) {
            ESP_LOGI(TAG, "writeReg16Bit(%04x,%02x) ... ok", reg, value);
        } else {
            last_status = 3;
        }
        i2c_cmd_link_delete(CommandHandle);
    }
}

void VL53L1X::writeReg16Bit(uint16_t reg, uint16_t value)
{
    i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "writeReg16Bit(%04x,%04x) ...", reg, value);

    if((CommandHandle = i2c_cmd_link_create()) != NULL) {
        ESP_ERROR_CHECK_NONFATAL(i2c_master_start(CommandHandle), last_status = 4; return );
        ESP_ERROR_CHECK_NONFATAL(
            i2c_master_write_byte(CommandHandle, (address << 1) | I2C_MASTER_WRITE, true), last_status = 2; return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_stop(CommandHandle), last_status = 4; return );
        if(ESP_OK == i2c_master_cmd_begin((i2c_port_t)I2CPortNumber, CommandHandle, pdMS_TO_TICKS(I2C_TIMEOUT))) {
            ESP_LOGI(TAG, "writeReg16Bit(%04x,%04x) ... ok", reg, value);
        } else {
            last_status = 3;
        }
        i2c_cmd_link_delete(CommandHandle);
    }
}

void VL53L1X::writeReg32Bit(uint16_t reg, uint32_t value)
{
    i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "writeReg32Bit(%04x,%08x) ...", reg, value);

    if((CommandHandle = i2c_cmd_link_create()) != NULL) {
        ESP_ERROR_CHECK_NONFATAL(i2c_master_start(CommandHandle), last_status = 4; return );
        ESP_ERROR_CHECK_NONFATAL(
            i2c_master_write_byte(CommandHandle, (address << 1) | I2C_MASTER_WRITE, true), last_status = 2; return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((reg >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 24) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 16) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 8) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_write_byte(CommandHandle, ((value >> 0) & 0xFF), true), last_status = 3;
                                 return );
        ESP_ERROR_CHECK_NONFATAL(i2c_master_stop(CommandHandle), last_status = 4; return );
        if(ESP_OK == i2c_master_cmd_begin((i2c_port_t)I2CPortNumber, CommandHandle, pdMS_TO_TICKS(I2C_TIMEOUT))) {
            ESP_LOGI(TAG, "writeReg32Bit(%04x,%08x) ... ok", reg, value);
        } else {
            last_status = 3;
        }
        i2c_cmd_link_delete(CommandHandle);
    }
}

uint8_t VL53L1X::readReg(regAddr reg)
{
    uint8_t buf[1];
    if(read(reg, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(buf)) {
        ESP_LOGI(TAG, "readReg(reg=%02x) => %02x", reg, buf[0]);
        return buf[0];
    }
    return 0;
}

uint16_t VL53L1X::readReg16Bit(uint16_t reg)
{
    uint8_t buf[2];
    if(read(reg, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(buf)) {
        ESP_LOGI(TAG, "readReg16Bit(reg=%02x) => %04x", reg, (buf[0] << 8) | (buf[1] << 0));
        return (buf[0] << 8) | (buf[1] << 0);
    }
    return 0;
}

uint32_t VL53L1X::readReg32Bit(uint16_t reg)
{
    uint8_t buf[4];
    if(read(reg, sizeof(buf), buf, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(buf)) {
        ESP_LOGI(TAG, "readReg32Bit(reg=%02x) => %04x", reg,
            (buf[0] << 24) | (buf[1] << 16) | (buf[2] << 8) | (buf[3] << 0));
        return (buf[0] << 24) | (buf[1] << 16) | (buf[2] << 8) | (buf[3] << 0);
    }
    return 0;
}

void VL53L1X::readResults()
{
    //i2c_cmd_handle_t CommandHandle = NULL;

    ESP_LOGI(TAG, "readResults() ...");

    uint8_t tmp[19];
    if(read(RESULT__RANGE_STATUS, sizeof(tmp), tmp, pdMS_TO_TICKS(I2C_TIMEOUT)) == sizeof(tmp)) {
        int j = 0;

        ESP_LOGI(TAG,
            "readResults() %02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x%02x ... done",
            tmp[0], tmp[1], tmp[2], tmp[3], tmp[4], tmp[5], tmp[6], tmp[7], tmp[8], tmp[9], tmp[10], tmp[11], tmp[12],
            tmp[13], tmp[14], tmp[15], tmp[16], tmp[17], tmp[18]);

        results.range_status = tmp[j++] << 0;

        j++; // report_status: not used

        results.stream_count = tmp[j++] << 0;

        results.dss_actual_effective_spads_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.dss_actual_effective_spads_sd0 |= tmp[j++];               // low byte

        j++; // peak_signal_count_rate_mcps_sd0: not used
        j++;

        results.ambient_count_rate_mcps_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.ambient_count_rate_mcps_sd0 |= tmp[j++];               // low byte

        j++; // sigma_sd0: not used
        j++;

        j++; // phase_sd0: not used
        j++;

        results.final_crosstalk_corrected_range_mm_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.final_crosstalk_corrected_range_mm_sd0 |= tmp[j++];               // low byte

        results.peak_signal_count_rate_crosstalk_corrected_mcps_sd0 = (uint16_t)tmp[j++] << 8; // high byte
        results.peak_signal_count_rate_crosstalk_corrected_mcps_sd0 |= tmp[j++];               // low byte
    } else {
        ESP_LOGE(TAG, "readResults() ... error");
    }
}
